--- a/index.html
+++ b/index.html
@@ -18,34 +18,43 @@
 
         .container {
             text-align: center;
+            padding: 20px;
+            margin-bottom: 30px;
+            width: 80%;
+            max-width: 400px;
             background: linear-gradient(135deg, #c850c0, #4158d0);
-            padding: 40px;
             border-radius: 10px;
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
             position: relative;
             overflow: hidden;
-            margin-bottom: 30px;
         }
 
         h1 {
-            font-size: 40px;
-            margin-bottom: 20px;
+            font-size: 24px;
+            margin-bottom: 10px;
             color: #fff;
             text-transform: uppercase;
-            letter-spacing: 2px;
+            letter-spacing: 1px;
         }
 
         .temporizador {
-            font-size: 24px;
+            font-size: 18px;
             color: #ff5733;
             margin-top: 10px;
         }
 
-        canvas {
-            position: absolute;
-            top: 0;
-            left: 0;
-            z-index: -1;
+        @media screen and (min-width: 768px) {
+            .container {
+                width: 40%;
+            }
+
+            h1 {
+                font-size: 28px;
+            }
+
+            .temporizador {
+                font-size: 22px;
+            }
         }
     </style>
 </head>
