--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
-<!DOCTYPE html>
-<html>
-
 <head>
-    <title>Temporizadores</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
     <style>
         body {
             display: flex;
@@ -16,13 +15,39 @@
             background: #f2f2f2;
         }
 
+        .main-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .title-container {
+            text-align: center;
+            padding: 20px;
+            margin: 10px;
+            width: 80%;
+            max-width: 400px;
+            background: #3498db;
+            border-radius: 10px;
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+            position: relative;
+            overflow: hidden;
+            z-index: 1;
+        }
+
+        .grid-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 20px;
+        }
+
         .container {
             text-align: center;
             padding: 20px;
-            margin-bottom: 30px;
-            width: 80%;
-            max-width: 400px;
-            background: linear-gradient(135deg, #c850c0, #4158d0);
+            width: calc(50% - 30px);
+            background: #3498db;
             border-radius: 10px;
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
             position: relative;
@@ -39,13 +64,13 @@
 
         .temporizador {
             font-size: 18px;
-            color: #ff5733;
+            color: #e74c3c;
             margin-top: 10px;
         }
 
         @media screen and (min-width: 768px) {
             .container {
-                width: 40%;
+                width: 300px;
             }
 
             h1 {
@@ -60,24 +85,37 @@
 </head>
 
 <body>
-    <div class="container">
-        <h1>Anderson</h1>
-        <div class="temporizador" id="andersonTemporizador"></div>
-    </div>
+    <div class="main-container">
+        <div class="title-container">
+            <h1>Liberdade irá cantar em:</h1>
+        </div>
 
-    <div class="container">
-        <h1>Mattos</h1>
-        <div class="temporizador" id="mattosTemporizador"></div>
-    </div>
+        <div class="grid-container">
+            <div class="container">
+                <h1>Anderson</h1>
+                <div class="temporizador" id="andersonTemporizador"></div>
+            </div>
 
-    <div class="container">
-        <h1>Richard</h1>
-        <div class="temporizador" id="richardTemporizador"></div>
-    </div>
+            <div class="container">
+                <h1>Mattos</h1>
+                <div class="temporizador" id="mattosTemporizador"></div>
+            </div>
 
-    <div class="container">
-        <h1>Aroldo</h1>
-        <div class="temporizador" id="aroldoTemporizador"></div>
+            <div class="container">
+                <h1>Richard</h1>
+                <div class="temporizador" id="richardTemporizador"></div>
+            </div>
+
+            <div class="container">
+                <h1>Aroldo</h1>
+                <div class="temporizador" id="aroldoTemporizador"></div>
+            </div>
+
+            <div class="container">
+                <h1>Jesus</h1>
+                <div class="temporizador" id="jesusTemporizador"></div>
+            </div>
+        </div>
     </div>
 
     <script>
@@ -92,6 +130,9 @@
 
         var aroldoHoraAlvo = 16;
         var aroldoMinutoAlvo = 48;
+
+        var jesusHoraAlvo = 17;
+        var jesusMinutoAlvo = 0;
 
         function atualizarTemporizador(horaAlvo, minutoAlvo, elemento) {
             var agora = new Date();
@@ -130,6 +171,7 @@
         atualizarTemporizador(mattosHoraAlvo, mattosMinutoAlvo, document.getElementById('mattosTemporizador'));
         atualizarTemporizador(richardHoraAlvo, richardMinutoAlvo, document.getElementById('richardTemporizador'));
         atualizarTemporizador(aroldoHoraAlvo, aroldoMinutoAlvo, document.getElementById('aroldoTemporizador'));
+        atualizarTemporizador(jesusHoraAlvo, jesusMinutoAlvo, document.getElementById('jesusTemporizador'));
     </script>
 </body>
 
