--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             }
 
             if (horaRestante < 0) {
-                elemento.innerHTML = "Tempo expirado";
+                elemento.innerHTML = "Partiu liberdade";
             } else {
                 var tempoRestante = (horaRestante < 10 ? "0" : "") + horaRestante + ":" +
                     (minutoRestante < 10 ? "0" : "") + minutoRestante + ":" +
@@ -176,3 +176,4 @@
 </body>
 
 </html>
+
