--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
     <script>
+        let andersonTimeDiff, mattosTimeDiff, richardTimeDiff, aroldoTimeDiff, jesusTimeDiff;
+
         function updateDateTime() {
             const months = [
                 "Janeiro", "Fevereiro", "Março", "Abril", "Maio", "Junho",
@@ -94,23 +96,18 @@
         function updateTimer() {
             const now = new Date();
 
-            // Anderson
             const andersonTargetTime = new Date(now);
             andersonTargetTime.setHours(17, 30, 0, 0);
 
-            // Mattos
             const mattosTargetTime = new Date(now);
             mattosTargetTime.setHours(17, 30, 0, 0);
 
-            // Richard
             const richardTargetTime = new Date(now);
             richardTargetTime.setHours(18, 0, 0, 0);
 
-            // Aroldo
             const aroldoTargetTime = new Date(now);
             aroldoTargetTime.setHours(16, 48, 0, 0);
 
-            // Jesus
             const jesusTargetTime = new Date(now);
             if (now.getDay() === 5) {
                 jesusTargetTime.setHours(12, 0, 0, 0);
@@ -118,47 +115,47 @@
                 jesusTargetTime.setHours(17, 0, 0, 0);
             }
 
-            const andersonTimeDiff = andersonTargetTime - now;
+            andersonTimeDiff = andersonTargetTime - now;
             const andersonSeconds = Math.floor((andersonTimeDiff / 1000) % 60);
             const andersonMinutes = Math.floor((andersonTimeDiff / (1000 * 60)) % 60);
             const andersonHours = Math.floor(andersonTimeDiff / (1000 * 60 * 60));
             document.getElementById('anderson-timer').textContent = `Anderson: ${andersonHours}h ${andersonMinutes}min ${andersonSeconds}s`;
 
-            const mattosTimeDiff = mattosTargetTime - now;
+            mattosTimeDiff = mattosTargetTime - now;
             const mattosSeconds = Math.floor((mattosTimeDiff / 1000) % 60);
             const mattosMinutes = Math.floor((mattosTimeDiff / (1000 * 60)) % 60);
             const mattosHours = Math.floor(mattosTimeDiff / (1000 * 60 * 60));
             document.getElementById('mattos-timer').textContent = `Mattos: ${mattosHours}h ${mattosMinutes}min ${mattosSeconds}s`;
 
-            const richardTimeDiff = richardTargetTime - now;
+            richardTimeDiff = richardTargetTime - now;
             const richardSeconds = Math.floor((richardTimeDiff / 1000) % 60);
             const richardMinutes = Math.floor((richardTimeDiff / (1000 * 60)) % 60);
             const richardHours = Math.floor(richardTimeDiff / (1000 * 60 * 60));
             document.getElementById('richard-timer').textContent = `Richard: ${richardHours}h ${richardMinutes}min ${richardSeconds}s`;
 
-            const aroldoTimeDiff = aroldoTargetTime - now;
+            aroldoTimeDiff = aroldoTargetTime - now;
             const aroldoSeconds = Math.floor((aroldoTimeDiff / 1000) % 60);
             const aroldoMinutes = Math.floor((aroldoTimeDiff / (1000 * 60)) % 60);
             const aroldoHours = Math.floor(aroldoTimeDiff / (1000 * 60 * 60));
             document.getElementById('aroldo-timer').textContent = `Aroldo: ${aroldoHours}h ${aroldoMinutes}min ${aroldoSeconds}s`;
 
-            const jesusTimeDiff = jesusTargetTime - now;
+            jesusTimeDiff = jesusTargetTime - now;
             const jesusSeconds = Math.floor((jesusTimeDiff / 1000) % 60);
             const jesusMinutes = Math.floor((jesusTimeDiff / (1000 * 60)) % 60);
             const jesusHours = Math.floor(jesusTimeDiff / (1000 * 60 * 60));
             document.getElementById('jesus-timer').textContent = `Jesus: ${jesusHours}h ${jesusMinutes}min ${jesusSeconds}s`;
+
+            if (andersonTimeDiff <= 0 && mattosTimeDiff <= 0 && richardTimeDiff <= 0 && aroldoTimeDiff <= 0 && jesusTimeDiff <= 0) {
+                document.body.innerHTML = "<h1 style='text-align: center; margin-top: 100px; font-size: 36px;'>Foi de Vasco</h1>";
+            }
         }
 
         updateDateTime();
         updateTimer();
         setInterval(updateDateTime, 1000);
         setInterval(updateTimer, 1000);
-         if (andersonTimeDiff <= 0 && mattosTimeDiff <= 0 && richardTimeDiff <= 0 && aroldoTimeDiff <= 0 && jesusTimeDiff <= 0) {
-        document.body.innerHTML = "<h1 style='text-align: center; margin-top: 100px; font-size: 36px;'>Foi de Vasco</h1>";
-    }
     </script>
 </body>
-
 </html>
 <style>
     * {
