--- a/index.html
+++ b/index.html
@@ -1,383 +1,108 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="pt-br">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coisas Leves</title>
-    <link href="style.css" rel="stylesheet" type="text/css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      padding: 50px;
+    }
+    .card {
+      margin-bottom: 20px;
+    }
+    #contadorLarissa, #contadorCarlos {
+      font-size: 24px;
+    }
+  </style>
+  <title>Contadores de Dias</title>
 </head>
-
 <body>
-    <div class="main">
-        <div class="side left">
-            <div class="dash left top"></div>
-
-            <div class="audio">
-                <div class="side ringer"></div>
-                <div class="side volume up"></div>
-                <div class="side volume down"></div>
-            </div>
-
-            <div class="dash left bottom"></div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6 mx-auto">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Período desde o tombo da Larissa</h5>
+            <h6 class="card-subtitle mb-2 text-muted">Último tombo registrado: 24/12/2023</h6>
+            <p id="contadorLarissa" class="card-text"></p>
+          </div>
         </div>
-
-        <div class="iphone" id="iphone">
-            <div class="dash top"></div>
-
-            <div class="inner" id="inner">
-                <div class="content" id="content">
-                    <div class="lock">
-                        <h1 class="time" id="current-time">00:00</h1>
-                        <h1 class="date" id="current-date">Segunda-feira, 1 de Janeiro</h1>
-                    </div>
-                </div>
-
-                <div class="timer" id="anderson-timer">
-                </div>
-
-                <div class="timer" id="mattos-timer">
-                </div>
-
-                <div class="timer" id="richard-timer">
-                </div>
-
-                <div class="timer" id="aroldo-timer">
-                </div>
-
-                <div class="timer" id="jesus-timer">
-                </div>
-
-                <a href="/passcode.html">
-                    <div class="home"></div>
-                </a>
-
-            </div>
-        </div>
-
-        <div class="side right">
-            <div class="dash right top"></div>
-
-            <div class="side power" onclick="turnOff()"></div>
-
-            <div class="dash right bottom"></div>
-        </div>
+      </div>
     </div>
 
-    <script src="script.js"></script>
-<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <div class="row">
+      <div class="col-md-6 mx-auto">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Período desde o vômito do Rato</h5>
+            <h6 class="card-subtitle mb-2 text-muted">Último vômito registrado: 21/01/2023</h6>
+            <p id="contadorCarlos" class="card-text"></p>
+          </div>
+        </div>
+      </div>
+    </div>
 
-<script>
-    let andersonTimeDiff, mattosTimeDiff, richardTimeDiff, aroldoTimeDiff, jesusTimeDiff;
-    let messageDisplayed = false;
+    <div class="row">
+      <div class="col-md-6 mx-auto">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Contador até o próximo dia</h5>
+            <p id="contadorProximoDia" class="card-text"></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
-    function updateDateTime() {
-        const months = [
-            "Janeiro", "Fevereiro", "Março", "Abril", "Maio", "Junho",
-            "Julho", "Agosto", "Setembro", "Outubro", "Novembro", "Dezembro"
-        ];
-        const days = ["Domingo", "Segunda-feira", "Terça-feira", "Quarta-feira",
-            "Quinta-feira", "Sexta-feira", "Sábado"
-        ];
-
-        const now = new Date();
-        const hours = String(now.getHours()).padStart(2, '0');
-        const minutes = String(now.getMinutes()).padStart(2, '0');
-        const day = days[now.getDay()];
-        const month = months[now.getMonth()];
-        const dayOfMonth = now.getDate();
-        const timeString = hours + ':' + minutes;
-        const dateString = `${day}, ${dayOfMonth} de ${month}`;
-
-        document.getElementById('current-time').textContent = timeString;
-        document.getElementById('current-date').textContent = dateString;
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    // Função para calcular a diferença em dias entre duas datas
+    function calcularDiferencaEmDias(data1, data2) {
+      const umDiaEmMilissegundos = 24 * 60 * 60 * 1000;
+      const diferencaEmMilissegundos = Math.abs(data1 - data2);
+      return Math.floor(diferencaEmMilissegundos / umDiaEmMilissegundos);
     }
 
-    function displayMessage() {
-            if (!messageDisplayed) {
-                const messageElement = document.createElement('h1');
-                messageElement.style.textAlign = 'center';
-                messageElement.style.marginTop = '100px';
-                messageElement.style.fontSize = '36px';
-                messageElement.textContent = 'Acabou o expediente 🎉';
-                document.body.appendChild(messageElement);
-                messageDisplayed = true;
-            }
-        }
+    // Data de referência (24 de dezembro de 2023 para a Larissa e 21 de janeiro de 2024 para o Carlos)
+    const dataLarissa = new Date('2023-12-24');
+    const dataCarlos = new Date('2024-01-21'); // 21 de janeiro de 2024
 
-    function formatTimeDiff(timeDiff) {
-        if (timeDiff > 0) {
-            const seconds = Math.floor((timeDiff / 1000) % 60);
-            const minutes = Math.floor((timeDiff / (1000 * 60)) % 60);
-            const hours = Math.floor(timeDiff / (1000 * 60 * 60));
-            return `${hours}h ${minutes}min ${seconds}s`;
-        }
-        return "0h 0min 0s";
+    // Data atual
+    const dataAtual = new Date();
+
+    // Atualizar os contadores de dias e tempo até o próximo dia
+    setInterval(() => {
+      const diferencaDiasLarissa = calcularDiferencaEmDias(dataAtual, dataLarissa);
+      const diferencaDiasCarlos = calcularDiferencaEmDias(dataAtual, dataCarlos);
+      document.getElementById('contadorLarissa').innerText = `${diferencaDiasLarissa} dias desde o tombo da Larissa`;
+      document.getElementById('contadorCarlos').innerText = `${diferencaDiasCarlos} dias desde o tombo do Carlos`;
+
+      const tempoRestanteProximoDia = calcularTempoRestanteProximoDia();
+      document.getElementById('contadorProximoDia').innerText = `Faltam ${tempoRestanteProximoDia} para o próximo dia`;
+    }, 1000); // Atualizar a cada segundo
+
+    // Função para calcular o tempo restante até o próximo dia no formato HH:MM:SS
+    function calcularTempoRestanteProximoDia() {
+      const agora = new Date();
+      const proximoDia = new Date(agora);
+      proximoDia.setDate(proximoDia.getDate() + 1);
+      proximoDia.setHours(0, 0, 0, 0);
+
+      const diferencaEmMilissegundos = proximoDia - agora;
+      const horas = Math.floor(diferencaEmMilissegundos / 3600000);
+      const minutos = Math.floor((diferencaEmMilissegundos % 3600000) / 60000);
+      const segundos = Math.floor((diferencaEmMilissegundos % 60000) / 1000);
+
+      return `${adicionarZero(horas)}:${adicionarZero(minutos)}:${adicionarZero(segundos)}`;
     }
 
-    function updateTimer() {
-        const now = new Date();
-
-        const andersonTargetTime = new Date(now);
-        andersonTargetTime.setHours(17, 30, 0, 0);
-
-        const mattosTargetTime = new Date(now);
-        mattosTargetTime.setHours(17, 30, 0, 0);
-
-        const richardTargetTime = new Date(now);
-        richardTargetTime.setHours(18, 0, 0, 0);
-
-        const aroldoTargetTime = new Date(now);
-        aroldoTargetTime.setHours(16, 48, 0, 0);
-
-        const jesusTargetTime = new Date(now);
-        if (now.getDay() === 5) {
-            jesusTargetTime.setHours(12, 0, 0, 0);
-        } else {
-            jesusTargetTime.setHours(17, 0, 0, 0);
-        }
-
-        andersonTimeDiff = andersonTargetTime - now;
-        document.getElementById('anderson-timer').textContent = `Anderson: ${formatTimeDiff(andersonTimeDiff)}`;
-
-        mattosTimeDiff = mattosTargetTime - now;
-        document.getElementById('mattos-timer').textContent = `Mattos: ${formatTimeDiff(mattosTimeDiff)}`;
-
-        richardTimeDiff = richardTargetTime - now;
-        document.getElementById('richard-timer').textContent = `Richard: ${formatTimeDiff(richardTimeDiff)}`;
-
-        aroldoTimeDiff = aroldoTargetTime - now;
-        document.getElementById('aroldo-timer').textContent = `Aroldo: ${formatTimeDiff(aroldoTimeDiff)}`;
-
-        jesusTimeDiff = jesusTargetTime - now;
-        document.getElementById('jesus-timer').textContent = `Jesus: ${formatTimeDiff(jesusTimeDiff)}`;
-
-        if (andersonTimeDiff <= 0 && mattosTimeDiff <= 0 && richardTimeDiff <= 0 && aroldoTimeDiff <= 0 && jesusTimeDiff <= 0) {
-            displayMessage();
-        }
+    // Função para adicionar um zero à esquerda se o valor for menor que 10
+    function adicionarZero(valor) {
+      return valor < 10 ? `0${valor}` : valor;
     }
-
-    updateDateTime();
-    updateTimer();
-    setInterval(updateDateTime, 1000);
-    setInterval(updateTimer, 1000);
-    
-</script>
-
+  </script>
 </body>
 </html>
-<style>
-    * {
-    box-sizing: border-box;
-    margin: 0;
-    font-weight: 200;
-    user-select: none;
-}
-
-body,
-html {
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 14px;
-    background-color: #1f2025;
-    color: #ffffff;
-}
-
-.main {
-    box-shadow: 20px 18px 13px 3px rgb(0 0 0 / 40%);
-    border-radius: 40px;
-    display: flex;
-    transform: scale(0.85);
-}
-
-.iphone {
-    border-radius: 40px;
-    width: 390px;
-    height: 844px;
-    box-shadow: 0 0 0px 4.34px #515056;
-    border: 10px solid #000000;
-    background-image: url("https://raw.githubusercontent.com/HamzaZaidiX/I-PHONE-BY-HTML-CSS-JAVASCRIPT-/main/Images/Backgrounds/lockscreen.jpeg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    z-index: 2;
-}
-
-.side> *:not(.dash) {
-    cursor: pointer;
-}
-
-.side.power {
-    height: 90px;
-    width: 6px;
-    border-top-right-radius: 8px;
-    border-bottom-right-radius: 8px;
-    background-color: #3c3b41;
-    margin-top: 120px;
-    position: relative;
-    left: 4px;
-    z-index: 1;
-}
-
-.audio {
-    margin-top: 70px;
-}
-
-.audio .side.ringer {
-    height: 30px;
-    width: 6px;
-    border-top-left-radius: 8px;
-    border-bottom-left-radius: 8px;
-    background-color: #3c3b41;
-    position: relative;
-    right: 4px;
-}
-
-.autio .side.volume {
-    cursor: pointer;
-}
-
-.audio .side.volume:active {
-    right: 2px !important;
-}
-
-.audio .side.volume.up {
-    height: 50px;
-    width: 6px;
-    border-top-left-radius: 8px;
-    border-bottom-left-radius: 8px;
-    background-color: #3c3b41;
-    margin-top: 20px;
-    position: relative;
-    right: 4px;
-}
-
-.audio .side.volume.down {
-    height: 50px;
-    width: 6px;
-    border-top-left-radius: 8px;
-    border-bottom-left-radius: 8px;
-    background-color: #3c3b41;
-    margin-top: 20px;
-    position: relative;
-    right: 4px;
-}
-
-.dash {
-    width: 5px;
-    height: 4px;
-    background: #67666b;
-    position: relative;
-}
-
-.dash.left,
-.dash.right {
-    margin-top: 70px;
-    left: 2px;
-    z-index: 3;
-    width: 4px;
-}
-
-.dash.right {
-    left: 0.5px;
-}
-
-.dash.left.bottom {
-    margin-top: 450px;
-}
-
-.dash.right.bottom {
-    margin-top: 470px;
-}
-
-.iphone .dash.top {
-    bottom: 14px;
-    left: 300px;
-}
-
-.iphone .dash.bottom {
-    top: 15px;
-    left: 60px;
-}
-
-.iphone .inner {
-    width: 100%;
-    height: 100%;
-    border-radius: 40px;
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    bottom: 5px;
-    transition-duration: 0.4s;
-}
-
-.iphone .inner .content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.iphone .inner .content .lock {
-    margin-top: 30px;
-}
-
-.iphone .inner .content .time {
-    font-size: 80px;
-    margin-top: 10px;
-}
-
-.iphone .inner .content .date {
-    font-size: 20px;
-}
-
-.iphone .inner .buttons {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 200px;
-    position: relative;
-    top: 60%;
-}
-
-.iphone .inner .buttons button {
-    cursor: pointer;
-    border-radius: 50%;
-    background-color: #1d2145;
-    border: none;
-    padding: 10px;
-    width: 50px;
-    height: 50px;
-    margin-bottom: 50px;
-    transition-duration: 0.1s;
-}
-
-.iphone .inner .buttons button:active {
-    transform: scale(1.5);
-    background-color: #121424;
-}
-
-.iphone .inner .buttons button.torch img {
-    height: 30px;
-}
-
-.iphone .inner .buttons button.camera img {
-    width: 30px;
-}
-
-.timer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 50px;
-    font-size: 24px; /* Tamanho da fonte ajustado para 24px */
-}
-
-.timer h2 {
-    color: white;
-}
-
-</style>'
